1998-04-12  Mikael Djurfeldt  <mdj@kenneth>

	* gc.c (scm_gc_sweep): Count cells correctly.  (Thanks to Ben
	Caradoc-Davies.)

	* eval.c (SCM_CEVAL, SCM_APPLY): In SCM_IM_APPLY and in the
	procedure apply: Copy argument lists before pushing them unto the
	environment so that the environment won't get mutated due to
	manipulation of procedure arguments.  This should perhaps be
	regarded as a temporary solution until someone finds a more
	efficient one.  (Thanks to Maciej Stachowiak.)

1998-04-10  Mikael Djurfeldt  <mdj@kenneth>

	* script.c (scm_compile_shell_switches): Use "guile" as default
	zero arg if argc is NULL.

1998-04-02  Mikael Djurfeldt  <mdj@nada.kth.se>

	* script.c (scm_compile_shell_switches): Allow NULL argv if argc
	is zero.  (Thanks to Dirk Herrmann.)

1998-03-30  Mikael Djurfeldt  <mdj@nada.kth.se>

	* ports.c (scm_add_to_port_table): First line is now line 0
	(was 1).  (Interface changed according to suggestion by Per
	Bothner.)

	* backtrace.c (display_header): Add 1 to line and column numbers
	when presenting them to the user.

	* eval.h, eval.c, debug.h, debug.c (scm_evaluator_traps): Moved
	from debug.c --> eval.c

	* eval.h, eval.c (scm_eval_options_interface): New options
	interface.
	(SCM_EVAL_STACK): New option: Size of newly created stacks,
	i.e. stacks for new threads.
	
	* coop.c (COOP_STKSIZE): Use SCM_EVAL_STACK.

	* eval.c (unsafe_setjmp): Removed with #if 0.

	* gsubr.c (scm_gsubr_apply): Added dummy return to avoid compiler
	warning.

	* eval.c, numbers.c, unif.c, srcprop.c: Added a few curly braces
	to avoid compiler warnings.

	* dynl-dl.c (sysdep_dynl_func): Only define usymb if needed.

1998-03-28  Mikael Djurfeldt  <mdj@nada.kth.se>

	* throw.c (handler_message): Print message on current error port
	instead of default error port.  (Thanks to Maciej Stachowiak.)

Mon Mar  2 21:35:02 1998  Gary Houston  <ghouston@actrix.gen.nz>

	* ports.c (scm_add_to_port_table): allocate in units of 