@@ -6,6 +6,7 @@ The Guile core distribution:
 
 Bug reports and fixes from:
 
+      Lauri Alanko
        Greg Badros
  Aleksandar Bakic
         Per Bothner
